src/objects/Item_Group__c.object
<CustomObject>
    <description>Item Group table for BaaN Price book integration</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate if Item Group is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Group_Code__c</fullName>
        <description>Item Group Code</description>
        <externalId>true</externalId>
        <label>Item Group Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Group_Description__c</fullName>
        <label>Item Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <picklist>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Category_Override__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>Product Category Override</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>IF(
 ISPICKVAL(Product_Category_Override__c, &apos;Battery&apos;),&quot;Battery&quot;,
IF(
 ISPICKVAL(Product_Category_Override__c, &apos;Charger&apos;), &quot;Charger&quot;,  
IF(
 ISPICKVAL(Product_Category_Override__c, &apos;Other&apos;), &quot;Other&quot;,  
IF( 
 AND( ISBLANK(TEXT(Product_Category_Override__c)),  
 OR(
  CONTAINS( Item_Group_Description__c , &apos;CHARGER&apos;), 
  CONTAINS( Item_Group_Description__c , &apos;Charger&apos;),
  CONTAINS( Item_Group_Description__c , &apos;CHGR&apos;), 
  CONTAINS( Item_Group_Description__c , &apos;Chgr&apos;))),
 &quot;Charger&quot;,
IF( 
 AND( ISBLANK(TEXT(Product_Category_Override__c)),  
 OR(
  CONTAINS( Item_Group_Description__c , &apos;BATT&apos;), 
  CONTAINS( Item_Group_Description__c , &apos;Batt&apos;),
  CONTAINS( Item_Group_Description__c , &apos;Battery&apos;),
  CONTAINS( Item_Group_Description__c , &apos;BATTERIES&apos;),
  CONTAINS( Item_Group_Description__c , &apos;Batteries&apos;))),
 &quot;Battery&quot;,
&quot;Other&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Highlight__c</fullName>
        <label>Sales Highlight</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tier_1__c</fullName>
        <inlineHelpText>Discounts above this percentage, will go through this level of approval</inlineHelpText>
        <label>Tier 1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2__c</fullName>
        <inlineHelpText>Discounts above this percentage, will go through this level of approval</inlineHelpText>
        <label>Tier 2</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3__c</fullName>
        <inlineHelpText>Discounts above this percentage, will go through this level of approval.</inlineHelpText>
        <label>Tier 3</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Item Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Group_Code__c</columns>
        <columns>Item_Group_Description__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Active__c</columns>
        <columns>Tier_1__c</columns>
        <columns>Tier_2__c</columns>
        <columns>Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Motive_Power_Item_Groups</fullName>
        <columns>NAME</columns>
        <columns>Item_Group_Code__c</columns>
        <columns>Item_Group_Description__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Active__c</columns>
        <columns>Tier_1__c</columns>
        <columns>Tier_2__c</columns>
        <columns>Tier_3__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Sales_Highlight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Book__c</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <label>Motive Power Item Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reserve_Power_Item_Groups</fullName>
        <columns>NAME</columns>
        <columns>Item_Group_Code__c</columns>
        <columns>Item_Group_Description__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Active__c</columns>
        <columns>Tier_1__c</columns>
        <columns>Tier_2__c</columns>
        <columns>Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Book__c</field>
            <operation>equals</operation>
            <value>RP</value>
        </filters>
        <label>Reserve Power Item Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IG-{00000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Groups</pluralLabel>
    <recordTypes>
        <fullName>Americas_Item_Group</fullName>
        <active>true</active>
        <description>Item Group for Americas BaaN integration</description>
        <label>Americas Item Group</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>